[package]
name = "beziercurve-wkt"
version = "0.1.3"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
edition = "2018"
repository = "https://github.com/fschutt/beziercurve-wkt"
homepage = "https://github.com/fschutt/beziercurve-wkt"
license = "MIT"
readme = "README.md"
description = "Serialize / deserialize bezier curves to / from a WKT-like string + do clipping operations"

[dependencies]
quadtree-f32 = "0.3.0"
rayon = { version = "1.3.0", optional = true }
serde = { version = "1.0", optional = true }

[features]
default = ["parallel"]
parallel = ["rayon"]
serialization = ["serde"]